force-app/main/default/objects/Opportunity/fields/Apply_URL__c.field-meta.xml
<CustomField>
    <fullName>Apply_URL__c</fullName>
    <description>Clickable link to apply for the job (from related Job Posting)</description>
    <formula>HYPERLINK(Job_Posting__r.Apply_URL__c, "Apply to Job", "_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply URL</label>
    <type>Text</type>
</CustomField>