force-app/main/default/objects/Opportunity/fields/Job_Discovered_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Discovered_Date__c</fullName>
    <description>Date when the job opportunity was first discovered/created</description>
    <label>Job Discovered</label>
    <type>DateTime</type>
</CustomField>